[package]
name = "atelier-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
gust-pak = { path = "../gust-pak" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
