[package]
name = "atelier-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
gust-g1t = { path = "../gust-g1t" }
gust-pak = { path = "../gust-pak" }
image = { version = "0.24.6", default-features = false, features = ["png"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
