[package]
name = "gust-g1t"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
dds-decoder = { path = "../dds-decoder" }
scroll = "0.11.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.43"
tracing = "0.1.37"
