[package]
name = "gust-pak"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_debug = "0.6.1"
gust-common = { path = "../gust-common" }
scroll = "0.12.0"
thiserror = "1.0.43"
tracing = "0.1.37"
